[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/main_menu/generic_button.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.262745, 0.545098, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBucksContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 442.0
margin_top = 197.0
margin_right = 582.0
margin_bottom = 403.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBucksContainer"]
margin_right = 140.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="Resume" type="Button" parent="CenterContainer/VBucksContainer"]
margin_top = 24.0
margin_right = 140.0
margin_bottom = 62.0
text = "Resume "
icon = ExtResource( 1 )
flat = true
icon_align = 1

[node name="Options" type="Button" parent="CenterContainer/VBucksContainer"]
margin_top = 72.0
margin_right = 140.0
margin_bottom = 110.0
text = "Options"
icon = ExtResource( 1 )
flat = true
icon_align = 1

[node name="Main menu" type="Button" parent="CenterContainer/VBucksContainer"]
margin_top = 120.0
margin_right = 140.0
margin_bottom = 158.0
text = "Main menu"
icon = ExtResource( 1 )
flat = true
icon_align = 1

[node name="Quit" type="Button" parent="CenterContainer/VBucksContainer"]
margin_top = 168.0
margin_right = 140.0
margin_bottom = 206.0
text = "Quit game"
icon = ExtResource( 1 )
flat = true
icon_align = 1

[connection signal="pressed" from="CenterContainer/VBucksContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBucksContainer/Main menu" to="." method="_on_Main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBucksContainer/Quit" to="." method="_on_Quit_pressed"]
